# wishlist

./: Dockerfile  README.md  docker-compose.example.yml  next.config.ts  package-lock.json  package.json
api/: Dockerfile  main.py  notion.py  pyproject.toml
app/: layout.tsx  page.tsx  strings.json
app/api/categories/: route.ts
app/api/gifts/: route.ts
doc/: CLOUD_HOSTING.md  NOTION.md  SELF_HOSTING.md  SETUP.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  strings.json
lib/: notion.ts  types.ts
