[tool.poetry]
name = "gift-api"
version = "0.1.0"
description = ""
authors = ["Alex Corazza <alex.corazza@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
notion-client = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
